Add initial game data API

--- a/TribeTussleGameDataEditor.API/appsettings.Development.Example.json
+++ b/TribeTussleGameDataEditor.API/appsettings.Development.Example.json
@@ -25,5 +25,6 @@
     "Email": "user@example.com",
     "Password": "password",
     "EnableSsl": true
-  }
+  },
+  "FileDataDirectory":  "C:\\data"
 }
