--- a/TribeTussleGameDataEditor.API/TribeTussleGameDataEditor.API.csproj
+++ b/TribeTussleGameDataEditor.API/TribeTussleGameDataEditor.API.csproj
@@ -24,6 +24,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7" />
+    <PackageReference Include="YamlDotNet" Version="11.2.1" />
   </ItemGroup>
 
 </Project>
